--- a/homework_2/app/views/movies/index.html.haml
+++ b/homework_2/app/views/movies/index.html.haml
@@ -4,16 +4,16 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th= link_to 'Movie Title', movies_path(sort_by: 'title'), id: 'title_header'
+      %th= link_to 'Release Date', movies_path(sort_by: 'release_date'), id: 'release_date_header'
       %th Rating
-      %th Release Date
       %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
         %td= movie.title 
+        %td= movie.release_date.strftime("%Y %b %d")
         %td= movie.rating
-        %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
 = link_to 'Add new movie', new_movie_path
