Filtro por Classificação Indicativa

--- a/homework_2/app/views/movies/index.html.haml
+++ b/homework_2/app/views/movies/index.html.haml
@@ -1,6 +1,16 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
+= form_tag movies_path, :method => :get, id: 'ratings_form' do
+  Include:
+  - @all_ratings.each do |rating|
+    - if (@rating_filter.include?(rating))
+      = check_box_tag "ratings[#{rating}]", 'yes', true, id: "ratings_#{rating}"
+    - else
+      = check_box_tag "ratings[#{rating}]", id: "ratings_#{rating}"
+    = rating
+  = submit_tag 'Refresh', id: 'ratings_submit'
+
 %table#movies
   %thead
     %tr
@@ -17,3 +27,6 @@
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
 = link_to 'Add new movie', new_movie_path
+
+Debug
+=@test.inspect
