--- a/homework_2/app/views/movies/edit.html.haml
+++ b/homework_2/app/views/movies/edit.html.haml
@@ -11,6 +11,6 @@
   = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
 
   = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
+  = date_select :movie, :release_date, :start_year => 1950
 
   = submit_tag 'Update Movie Info'
